<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/colorBlack"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout style="@style/layout"
        android:orientation="horizontal"
        android:layout_gravity="center"

        android:background="@color/colorBrown"
        android:layout_width="700dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <ImageView style="@style/backroundSquare"
            android:id="@+id/square1"
            android:contentDescription="@string/square1"
            android:background="@drawable/square_gold"

            />
        <ImageView style="@style/backroundSquare"
            android:id="@+id/square2"
            android:background="@drawable/square_coin"
            android:contentDescription="@string/square2"
            />
        <ImageView style="@style/backroundSquare"
            android:id="@+id/square3"
            android:background="@drawable/chest"
            android:contentDescription="@string/square3"
            />
        <ImageView style="@style/backroundSquare"
            android:id="@+id/square4"
            android:background="@drawable/square_dimand"
            android:contentDescription="@string/square4"
            />
        <ImageView style="@style/backroundSquare"
            android:id="@+id/square5"
            android:background="@drawable/square_coin"
            android:contentDescription="@string/square5"
            />
        <ImageView style="@style/backroundSquare"

            android:background="@drawable/square_gold"
            android:id="@+id/square6"
            android:contentDescription="@string/square6"
            />
        <ImageView style="@style/backroundSquare"
            android:id="@+id/square7"
            android:contentDescription="@string/square7"
            android:background="@drawable/square_dimand"
            />
        <ImageView style="@style/backroundSquare"
            android:id="@+id/square8"
            android:background="@drawable/square_coin"
            android:contentDescription="@string/square8"
            />
    </LinearLayout>




    <LinearLayout
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/colorBlack"
        android:layout_width="720dp">

        <LinearLayout android:layout_width="90dp"

            android:orientation="vertical"
            android:background="@color/colorBrown"
            android:layout_height="match_parent">
            <ImageView
                style="@style/sides_squares"
                android:id="@+id/square24"
                android:background="@drawable/chest"
                android:contentDescription="@string/square8"
                />
            <ImageView
                style="@style/sides_squares"
                android:id="@+id/square23"
                android:background="@drawable/square_coin"
                android:contentDescription="@string/square2"
                />
            <ImageView
                style="@style/sides_squares"
                android:id="@+id/square22"
                android:background="@drawable/square_dimand"
                android:contentDescription="@string/square4"
                />
            <ImageView
                style="@style/sides_squares"
                android:id="@+id/square21"
                android:background="@drawable/square_gold"
                android:contentDescription="@string/square8"
                />
        </LinearLayout>

        <RelativeLayout android:layout_width="104dp"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            android:layout_height="match_parent">
            <TextView
                style="@style/top_textview"
                android:id="@+id/txtTurnsLeft"
                android:text="turns: "
                android:background="@drawable/tower_button"
                android:contentDescription="@string/square8"
                />

            <LinearLayout
                android:orientation="vertical"
                style="@style/tower"

                android:layout_above="@+id/btnSpendOne"
                android:layout_below="@+id/txtTurnsLeft"
                android:contentDescription="@string/square8" >


                   <TextView
                       style="@style/tower_text"
                       android:id="@+id/tower_1_7"
                        />
                   <TextView
                       style="@style/tower_text"
                       android:id="@+id/tower_1_6"
                       />
                    <TextView
                        style="@style/tower_text"
                        android:id="@+id/tower_1_5"
                        />
                    <TextView
                        style="@style/tower_text"
                        android:id="@+id/tower_1_4"
                        />
                        <TextView
                    style="@style/tower_text"
                            android:id="@+id/tower_1_3"
                            />
                    <TextView
                    style="@style/tower_text"
                        android:id="@+id/tower_1_2"
                        />
                    <TextView
                   android:id="@+id/tower_1_1"
                    style="@style/tower_text" />




            </LinearLayout>

            <ImageView
                style="@style/bottom_button"
                android:id="@+id/btnSpendOne"
                android:src="@drawable/tower_button50"
                android:contentDescription="@string/square8"
                />
        </RelativeLayout>

        <RelativeLayout android:layout_width="104dp"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            android:layout_height="match_parent">
            <TextView
                style="@style/top_textview"
                android:id="@+id/txtTotalCoins"
                android:text="coins"
                android:background="@drawable/tower_button"
                android:contentDescription="@string/square8"
                />

            <LinearLayout
                android:orientation="vertical"
                style="@style/tower"

                android:layout_above="@+id/btnSpendTwo"
                android:layout_below="@+id/txtTotalCoins"
                android:contentDescription="@string/square8" >

                <TextView
                    style="@style/tower_text"
                    android:id="@+id/tower_2_7"
                    />
                <TextView
                    style="@style/tower_text"
                    android:id="@+id/tower_2_6"
                    />
                <TextView
                    style="@style/tower_text"
                    android:id="@+id/tower_2_5"
                    />
                <TextView
                    style="@style/tower_text"
                    android:id="@+id/tower_2_4"
                    />
                <TextView
                    style="@style/tower_text"
                    android:id="@+id/tower_2_3"
                    />
                <TextView
                    style="@style/tower_text"
                    android:id="@+id/tower_2_2"
                    />
                <TextView
                    android:id="@+id/tower_2_1"
                    style="@style/tower_text" />




            </LinearLayout>


            <ImageView
                style="@style/bottom_button"
                android:id="@+id/btnSpendTwo"
                android:src="@drawable/tower_button100"
                android:contentDescription="@string/square8"
                />
        </RelativeLayout>
        <RelativeLayout android:layout_width="104dp"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtCoinsx"
                style="@style/top_textview"

                android:background="@drawable/tower_button"
                android:contentDescription="@string/square8"

                android:text="Coinsx"

                />

            <ImageView

                android:id="@+id/imgDice"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_above="@+id/btnRollDice"
                android:layout_below="@+id/txtCoinsx"



                android:contentDescription="@string/square8"
                android:src="@drawable/img_dice_six" />


            <ImageView
                android:id="@+id/btnRollDice"
                style="@style/bottom_button"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"

                android:contentDescription="@string/square8"
                android:src="@drawable/spin_dice" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="104dp"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtScore"
                style="@style/top_textview"

                android:background="@drawable/tower_button"
                android:contentDescription="@string/square8"

                android:text="Score"
                />

            <LinearLayout
                android:orientation="vertical"
                style="@style/tower"

                android:layout_above="@+id/btnSpendThree"
                android:layout_below="@+id/txtScore"
                android:contentDescription="@string/square8" >


                <TextView
                    style="@style/tower_text"
                    android:id="@+id/tower_3_7"
                    />
                <TextView
                    style="@style/tower_text"
                    android:id="@+id/tower_3_6"
                    />
                <TextView
                    style="@style/tower_text"
                    android:id="@+id/tower_3_5"
                    />
                <TextView
                    style="@style/tower_text"
                    android:id="@+id/tower_3_4"
                    />
                <TextView
                    style="@style/tower_text"
                    android:id="@+id/tower_3_3"
                    />
                <TextView
                    style="@style/tower_text"
                    android:id="@+id/tower_3_2"
                    />
                <TextView
                    android:id="@+id/tower_3_1"
                    style="@style/tower_text" />



            </LinearLayout>

            <ImageView
                style="@style/bottom_button"
                android:id="@+id/btnSpendThree"
                android:layout_alignParentBottom="true"

                android:src="@drawable/tower_button200"
                android:contentDescription="@string/square8"
                />
        </RelativeLayout>
        <RelativeLayout android:layout_width="104dp"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            android:layout_height="match_parent">
            <TextView
                style="@style/top_textview"

                android:id="@+id/text5"
                android:background="@drawable/tower_button"
                android:contentDescription="@string/square8"
                />

            <LinearLayout
                android:orientation="vertical"
                style="@style/tower"

                android:layout_above="@+id/btnSpendFour"
                android:layout_below="@+id/text5"
                android:contentDescription="@string/square8" >

                <TextView
                    style="@style/tower_text"
                    android:id="@+id/tower_4_7"
                    />
                <TextView
                    style="@style/tower_text"
                    android:id="@+id/tower_4_6"
                    />
                <TextView
                    style="@style/tower_text"
                    android:id="@+id/tower_4_5"
                    />
                <TextView
                    style="@style/tower_text"
                    android:id="@+id/tower_4_4"
                    />
                <TextView
                    style="@style/tower_text"
                    android:id="@+id/tower_4_3"
                    />
                <TextView
                    style="@style/tower_text"
                    android:id="@+id/tower_4_2"
                    />
                <TextView
                    android:id="@+id/tower_4_1"
                    style="@style/tower_text" />


            </LinearLayout>

            <ImageView
                style="@style/bottom_button"
                android:id="@+id/btnSpendFour"
                android:layout_alignParentBottom="true"

                android:src="@drawable/tower_button400"
                android:contentDescription="@string/square8"
                />
        </RelativeLayout>
        <LinearLayout android:layout_width="90dp"
            android:orientation="vertical"
            android:background="@color/colorBrown"
            android:layout_height="match_parent">
            <ImageView
                style="@style/sides_squares"
                android:id="@+id/square9"
                android:background="@drawable/square_dimand"
                android:contentDescription="@string/square8"
                />
            <ImageView
                style="@style/sides_squares"
                android:id="@+id/square10"
                android:background="@drawable/chest"
                android:contentDescription="@string/square2"
                />
            <ImageView
                style="@style/sides_squares"
                android:id="@+id/square11"
                android:background="@drawable/square_coin"
                android:contentDescription="@string/square4"
                />
            <ImageView
                style="@style/sides_squares"
                android:id="@+id/square12"
                android:background="@drawable/square_gold"
                android:contentDescription="@string/square8"
                />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout style="@style/layout"
        android:layout_width="700dp"
        android:background="@color/colorBrown"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="1">


        <ImageView style="@style/backroundSquare"
            android:id="@+id/square20"
            android:contentDescription="@string/square1"

            android:background="@drawable/square_coin"/>
        />
        <ImageView style="@style/backroundSquare"
            android:background="@drawable/square_gold"

            android:id="@+id/square19"


            android:contentDescription="@string/square2"/>
        />
        <ImageView style="@style/backroundSquare"
            android:id="@+id/square18"
            android:background="@drawable/square_coin"

            android:contentDescription="@string/square3"/>
        />
        <ImageView style="@style/backroundSquare"
            android:id="@+id/square17"
            android:background="@drawable/square_dimand"
            android:contentDescription="@string/square4"/>
        />
        <ImageView style="@style/backroundSquare"
            android:id="@+id/square16"
            android:background="@drawable/square_gold"
            android:contentDescription="@string/square5"/>
        />
        <ImageView style="@style/backroundSquare"
            android:id="@+id/square15"
            android:background="@drawable/chest"
            android:contentDescription="@string/square6"/>
        />
        <ImageView style="@style/backroundSquare"
            android:id="@+id/square14"
            android:background="@drawable/square_dimand"
            android:contentDescription="@string/square7"/>
        />
        <ImageView style="@style/backroundSquare"
            android:id="@+id/square13"
            android:background="@drawable/square_coin"
            android:contentDescription="@string/square8"/>
        />

    </LinearLayout>

</LinearLayout>